# ra-law-db

./: README.md  pyproject.toml  regulatory.sqlite3
docs/: runbook.md  scraper_architecture.md  scraping-pipeline.md
mappings/: cas_mappings.jsonl  unresolved_entries.jsonl
masters/: cscl_substances.csv  cwc_substances.csv  master_coverage.json  poison_control_substances.csv  substance_aliases.csv
parsed/: law_entries.jsonl  source_snapshots.jsonl
raw/laws/340CO0000000002/: 20260224T040552181690Z.meta.json  20260224T040552181690Z.xml
raw/laws/346CO0000000300/: 20260222T013836662008Z.meta.json  20260222T013836662008Z.xml  20260224T030358996863Z.meta.json  20260224T030442623173Z.meta.json  20260224T040543500513Z.meta.json
raw/laws/349CO0000000202/: 20260224T040549920838Z.meta.json  20260224T040549920838Z.xml
raw/laws/407CO0000000192/: 20260224T040554226444Z.meta.json  20260224T040554226444Z.xml
raw/laws/412CO0000000138/: 20260222T013838954528Z.meta.json  20260224T030401413946Z.meta.json  20260224T030401413946Z.xml  20260224T030445070789Z.meta.json  20260224T040546734522Z.meta.json
src/ra_law_db/: __init__.py  models.py  screening_db.py
tests/: test_screening_db.py
