[project]
name = "ra-law-db"
version = "0.2.0"
description = "Japanese chemical law screening package and published dataset"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/ra_law_db/data/regulatory.sqlite3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ra_law_db"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
